--- a/Black Hole/package.json
+++ b/Black Hole/package.json
@@ -3,10 +3,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-  }
-  ,
+  },
   "dependencies": {
     "dat-gui": "^0.5.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.176.0"
   },
   "devDependencies": {
